--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <title>Nep huiswerkopdracht</title>
 </head>
 <body>
-
+<p>dit is een alinea dat er leuk uitziet</p>
+<br/>
+<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cupiditate ea numquam omnis provident repellat! Ab dolore, fugiat hic iste nemo obcaecati quibusdam voluptatum. Ipsa minima nisi optio sapiente tempore, voluptas.</p>
 </body>
 </html>
