commit nummer 3 danny

--- a/index.html
+++ b/index.html
@@ -11,5 +11,7 @@
 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cupiditate ea numquam omnis provident repellat! Ab dolore, fugiat hic iste nemo obcaecati quibusdam voluptatum. Ipsa minima nisi optio sapiente tempore, voluptas.</p>
 </body>
 <br>
+<h3>Dit werkt soms</h3>
+<link   rel="styelsheet"    href="styles.css">
 <br>
 </html>
